fix: fixed transaction set tasks not showing up

--- a/src/sass/variantcss/_dashboardTasks.scss
+++ b/src/sass/variantcss/_dashboardTasks.scss
@@ -10,10 +10,12 @@
 
 .complete-touched-task{
   background-color: transparent;
-  padding: 10px 0 10px 0!important;
+  padding: 0 0 10px 0;
   transition: background-color 0.5s linear;
+  transition: padding 0.5s linear;
   &:active{
     background-color: #dcfffa;
+    padding: 10px 0 10px 0!important;
   }
 }
 
